--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ body {
     margin-top: 15px;
 }
 
+.Certificate {
+    margin-top:15px;
+}
+
 h2 {
     font-family: 'Dancing Script', cursive;
 
