--- a/styles.css
+++ b/styles.css
@@ -55,14 +55,8 @@ body {
     padding:20px;
     border-radius: 10px;
     border-color: white;
-}
-
-.salary {
-    margin-top: 30px;
-}
-
-.Certificate {
-    margin-top:30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 h2 {
