--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,67 @@
+* {
+    box-sizing: border-box;
+    margin:0px;
+    padding:0px;
+}
 
+body {
+    width:100%;
+    height:100vh;
+    background-color: wheat;
+    background-image: url(../Odin-recipe/Images/background.jpg);
+     background-repeat: no-repeat;
+     background-attachment: fixed; 
+     background-size: 100% 100%;
+}
+
+.header {
+    display:flex;
+    justify-content: center;
+    font-size: 48px;
+    color:white;
+    font-weight: 900;
+    padding:20px;
+    margin-bottom:20px;
+    background: linear-gradient(to right, red, royalblue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: 'Dancing Script', cursive;
+}
+
+.main {
+    width:100%;
+    height:100vh;
+    margin:10px;
+    margin-right:40px;
+}
+.cards {
+    width:100%;
+    height:auto;
+    display:flex;
+    flex-wrap: wrap ;
+    gap:0px;
+    justify-content: center;
+}
+
+.card {
+    width: 700px;
+    height:100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap:10px;
+    margin-right:30px;
+    border:2px solid black;
+    padding:20px;
+    border-radius: 10px;
+    border-color: white;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+h2 {
+    font-family: 'Dancing Script', cursive;
+
+}
+
+/*Finished*/
